# virtual-properties

./: .env  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 376f1b92f5fc_added_apartment_rental_info_tables.py  57406e875881_initial_migration_users_and_roles.py  9a33632dfdf7_changed_roles_to_use_enum_and_changed_.py
app/: __init__.py  config.py  main.py
app/api/endpoints/: auth.py  real_estate.py
app/api/endpoints/real_estate/: apartments.py
app/controllers/: __init__.py  auth.py
app/controllers/real_estate/: apartments.py
app/data_access/: __init__.py  auth.py
app/data_access/real_estate/: apartments.py
app/db/: db_config.py  test_db.py
app/enums/: apartment_enums.py  roles.py
app/models/: __init__.py  auth.py  real_estate.py
app/schemas/: __init__.py  apartment_schemas.py  auth_schemas.py  shared_schemas.py
app/utils/: __init__.py  hash_password.py  jwt.py  permissions.py
